*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_ui_decorators.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_ui_decorators.htm
@@ -20,7 +20,7 @@ revisions.
 
 
 
-<p><img border="0" src="images/teamdecorators.jpg" width="331" height="380">
+<p><img border="0" src="images/teamdecorators.jpg">
 </p>
 
 
