--- a/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
@@ -26,7 +26,7 @@ in the workbench, the first view shown is called the Bookshelf. On the Bookshelf
 are links to the various groupings of documentation for the product. Click on 
 one of the links to go to the navigation tree for that set of documentation. At 
 any time, you can return to the bookshelf by clicking the <b>Table of Contents</b> 
-button <img border="0" src="../images/bookshelf.gif" width="22" height="22">.</p>
+button <img border="0" src="../images/bookshelf.gif" alt="Table of contents button" width="22" height="22">.</p>
 
 <h2>Search</h2>
 <p>If you want to find a particular piece of information in the online help, use
