--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -40,7 +40,7 @@ junit.textui.TestRunner.java</SPAN>
 In the Outline view, notice that the TestRunner class has a &quot;runnable&quot; icon.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-58.gif" width="190" height="100">
+<IMG SRC="../images/qs-58.gif">
 </DIV>
 </DIV>
 </TD>
@@ -53,14 +53,13 @@ In the Outline view, notice that the TestRunner class has a &quot;runnable&quot;
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Packages view, select the <SPAN CLASS="Filename">
-junit.textui</SPAN>
- package and click the <SPAN CLASS="Label">
-Run</SPAN>
- button in the toolbar.</P>
+Using the drop-down <SPAN CLASS="Label">
+Run</SPAN> button in the toolbar, select <SPAN CLASS="Label">Java Application</SPAN> from the
+cascading <SPAN CLASS="Label">Run As</SPAN> menu. This will launch the class in the active editor,
+or the selected class in the Navigator, as a local Java application.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-59.gif" width="40" height="23">
+<IMG SRC="../images/qs-59.gif">
 </DIV>
 </DIV>
 </TD>
@@ -73,18 +72,11 @@ Run</SPAN>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Run dialog, make sure that the <SPAN CLASS="Label">
-Set as default launcher for project JUnit</SPAN>
- box is checked, then click <SPAN CLASS="Label">
-Next</SPAN>.</P>
+Notice that the program is run and the following message appears in the Console view telling you that the program needs an execution argument.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-60.gif" width="338" height="452">
+<IMG SRC="../images/qs-60.gif">
 </DIV>
-</DIV>
-<DIV CLASS="Note">
-<P CLASS="Para">
-Note:	This option &quot;remembers&quot; that the Java Application Launcher should be used for running programs in this project.</P>
 </DIV>
 </TD>
 </TR>
@@ -96,12 +88,11 @@ Note:	This option &quot;remembers&quot; that the Java Application Launcher shoul
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Select Target dialog, select <SPAN CLASS="Filename">
-TestRunner- junit.textui</SPAN>, and click <SPAN CLASS="Label">
-Finish</SPAN>.</P>
+Using the drop-down <SPAN CLASS="Label">
+Run</SPAN> menu in the toolbar, select <SPAN CLASS="Label">Run...</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-61.gif" width="338" height="456">
+<IMG SRC="../images/qs-61.gif">
 </DIV>
 </DIV>
 </TD>
@@ -114,21 +105,12 @@ Finish</SPAN>.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-The Debug perspective opens, and the TestRunner program runs with a message in the Console view telling you that the program needs an execution argument.</P>
-<P CLASS="Para">
- Notice that in the Processes view, the JUnit launch is represented.</P>
+The Launch Configurations dialog opens, and the TestRunner launch configuration is selected. When you ran the program
+using the Java Application shortcut, a launch configuration was automatically created with default settings to launch 
+the selected class.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-62.gif" width="349" height="178">
-</DIV>
-</DIV>
-<DIV CLASS="Note">
-<P CLASS="Para">
-Note:	You can choose whether to automatically switch to the Debug perspective when launching a program on the Debug preferences page (Window &gt; Preferences &gt; Debug).</P>
-</DIV>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-63.gif" width="408" height="103">
+<IMG SRC="../images/qs-62.gif">
 </DIV>
 </DIV>
 </TD>
@@ -141,10 +123,11 @@ Note:	You can choose whether to automatically switch to the Debug perspective wh
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Return to the Java perspective by clicking the corresponding perspective button in the shortcut bar, along the left edge of the main workbench window.</P>
+Select the Arguments tab and type <SPAN CLASS="Filename">
+junit.samples.VectorTest</SPAN> in the Program arguments area.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-64.gif" width="208" height="355">
+<IMG SRC="../images/qs-63.gif">
 </DIV>
 </DIV>
 </TD>
@@ -157,9 +140,13 @@ Return to the Java perspective by clicking the corresponding perspective button 
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Packages view, select the <SPAN CLASS="Filename">
-junit.textui.TestRunner.java</SPAN>
- resource and from its context menu, select Properties.</P>
+ Click <SPAN CLASS="Label">
+Run</SPAN>. This time the program runs correctly, indicating the number of tests that were run.</P>
+<DIV CLASS="Snapshot">
+<DIV>
+<IMG SRC="../images/qs-64.gif">
+</DIV>
+</DIV>
 </TD>
 </TR>
 <TR>
@@ -169,43 +156,11 @@ junit.textui.TestRunner.java</SPAN>
 </P>
 </TD><TD valign="top" align="left">
 <P CLASS="Para">
-In the Program Arguments field on the Execution Arguments properties page, type <SPAN CLASS="Filename">
-junit.samples.VectorTest</SPAN>. Then click <SPAN CLASS="Label">
-OK</SPAN>.</P>
+Switch to the Debug perspective. In the Debug view, notice that a launch was registered each time the
+program was run.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-65.gif" width="325" height="165">
-</DIV>
-</DIV>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>10.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-Select TestRunner from the drop-down menu from the <SPAN CLASS="Label">
-Run</SPAN>
- button in the workbench toolbar. This list contains the previously-launched programs.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>11.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-The Debug perspective opens, and the TestRunner program runs correctly this time, indicating the number of tests that were run. </P>
-<P CLASS="Para">
-Notice that in the Processes view, a different JUnit launch is represented.</P>
-<DIV CLASS="Snapshot">
-<DIV>
-<IMG SRC="../images/qs-66.gif" width="279" height="288">
+<IMG SRC="../images/qs-65.gif">
 </DIV>
 </DIV>
 <DIV CLASS="Note">
@@ -219,17 +174,35 @@ Relaunch</SPAN>
 <TR>
 <TD valign="top" align="left">
 <P CLASS="Para">
-<b>12.</b>
+<b>10.</b>
 </P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-From the context menu in the Processes view, select <SPAN CLASS="Label">
+Select the drop-down menu from the <SPAN CLASS="Label">
+Run</SPAN>
+ button in the workbench toolbar. This list contains the previously-launched programs. Programs can
+ be relaunched by selecting them in this history list as well.</P>
+<DIV CLASS="Snapshot">
+<DIV>
+<IMG SRC="../images/qs-66.gif">
+</DIV>
+</DIV> 
+</TD>
+</TR>
+<TD valign="top" align="left">
+<P CLASS="Para">
+<b>11.</b>
+</P>
+</TD>
+<TD valign="top" align="left">
+<P CLASS="Para">
+From the context menu in the Debug view (or the equivalent toolbar button), select <SPAN CLASS="Label">
 Remove All Terminated</SPAN>
  to clear the view of terminated launches.</P>
 <DIV CLASS="Snapshot">
 <DIV>
-<IMG SRC="../images/qs-67.gif" width="336" height="203">
+<IMG SRC="../images/qs-67.gif">
 </DIV>
 </DIV>
 </TD>
