--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
@@ -69,6 +69,6 @@ Accessibility Features in Eclipse</a></p>
  <a href="keyboardshortcuts.htm">Keyboard shortcuts</a></p>
 
  
-<p><a href="../../hglegal.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="195" height="12"></a></p>
+<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
 
 </body>
