--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -62,5 +62,5 @@ Accessibility Features in Eclipse</a></p>
  <p><a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
 
  
-<p><a href="../../hglegal.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="195" height="12"></a></p>
+<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a></p>
 </body>
