--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/no_help_exists.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/no_help_exists.htm
@@ -11,9 +11,7 @@
 No Help Exists</H1>
 <p CLASS="Head">There are no available help topics associated with this
 item.&nbsp;&nbsp;&nbsp;</p>
-<P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
-</P>
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 
 </BODY>
