Fix spelling mistake

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_devprocess.htm
@@ -43,7 +43,7 @@ debug plug-in.</li>
       Java program under debug.</li>
    <li><b><a href="../reference/api/org/eclipse/jdt/core/dom/package-summary.html">
   org.eclipse.jdt.core.dom</a>
-     </b> supports Abstract Syntax Trees (AST) that can be used for exaiming
+     </b> supports Abstract Syntax Trees (AST) that can be used for examining
  the structure of a compilation unit down to the statement level.<br>
    </li>
     <li><b><a href="../reference/api/org/eclipse/jdt/core/search/package-summary.html">
