--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -31,7 +31,7 @@ major sets of documentation available. </p>
   <li><p>
   To synchronize the navigation frame with the current topic, click the
     <b>Synchronize</b> button
-  <img border="0" src="../images/synchronize.gif" width="22" height="22">. This is helpful if you have followed several links to
+  <img border="0" src="../images/synchronize.gif">. This is helpful if you have followed several links to
     related topics in several files, and want to see where the current topic
     fits into the navigation path.</li>
 </ol>
@@ -52,7 +52,7 @@ Showing and hiding the navigation frame</h2>
 <p>To increase the space
 available for viewing the help content, the navigation frame can be hidden.To hide the navigation frame, click the 
 <b>Toggle Navigation</b> button
-<img border="0" src="../images/hidenav.gif" width="24" height="22">
+<img border="0" src="../images/hidenav.gif">
 on the Help view's toolbar. To show it, click the button again.</p>
 
 <h2>Printing online help</h2>
@@ -60,7 +60,7 @@ on the Help view's toolbar. To show it, click the button again.</p>
 <ol>
   <li>Select the topic in the navigation frame.</li>
   <li>Click the <b>Print</b> button
-  <img border="0" src="../images/print.gif" width="23" height="22">
+  <img border="0" src="../images/print.gif">
     in the Help toolbar.</li>
   <li>Select the desired printer settings, and click <b>Print</b>.</li>
 </ol>
