--- a/bundles/org.eclipse.platform.doc.user/concepts/coutline.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/coutline.htm
@@ -1,43 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Outline view</title>
-
-</HEAD>
-
-<H1 CLASS="Head">
-Outline view</H1>
-
-<P>This view displays an outline of a structured file
-that is currently open in the editor area, and&nbsp; lists structural
-elements.&nbsp;The contents of the outline view are editor-specific. In the
-example below, which is for a Java source file, the structural elements are classes, variables, and methods.
-The contents of the toolbar are also editor-specific.
-</p>
-
-<P><img border="0" src="../images/ref-8.gif" alt="Picture of Outline view showing structure for a Java file" width="251" height="255">
-</p>
-
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-5.htm"><br>
-Views</a><a href="concepts-4.htm"><br>
-Perspectives</a><a href="concepts-12.htm"><br>
-Resources</a>
-</P>
-
-
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-3.htm">Opening views</a><a href="../tasks/tasks-3b.htm"><br>
-</a><a href="../tasks/tasks-3e.htm">Moving and docking views</a><br>
-<a href="../tasks/tasks-9b.htm">Creating fast views</a>
-</P>
-
-
-<P>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
-
-
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Outline view</title></HEAD><BODY><H1 CLASS="Head">Outline view</H1><P>This view displays an outline of a structured filethat is currently open in the editor area, and&nbsp; lists structuralelements.&nbsp;The contents of the outline view are editor-specific. In theexample below, which is for a Java source file, the structural elements are classes, variables, and methods.The contents of the toolbar are also editor-specific.</p><P><img border="0" src="../images/ref-8.gif" alt="Picture of Outline view showing structure for a Java file" width="251" height="255"></p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="concepts-5.htm">Views</a><br><a href="concepts-4.htm">Perspectives</a><br><a href="concepts-12.htm">Resources</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="../tasks/tasks-3.htm">Opening views</a><br><a href="../tasks/tasks-3e.htm">Moving and docking views</a><br><a href="../tasks/tasks-9b.htm">Creating fast views</a></p><p>&nbsp;<br><img align="texttop" src = ../images/ngibmcpy2002.gif alt="Copyright IBM Corp. 2000, 2002" width="195" height="12"></p></BODY></HTML>
