--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-5.htm
@@ -1,57 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Views</title>
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Views</H1>
-<P CLASS="Para" Label=Type>
-Views support editors and provide alternative
-presentations of or ways to navigate the information in your workbench.&nbsp; For
-example, the Navigator view displays projects and other resources that you are working
-with.</P>
-<P CLASS="Para" Label=Type>
- Views also have their own
-context menus. To open the context menu for a view, click the icon at the left
-end of the view's title bar. Some views also have their own toolbars. The actions represented by buttons on view
-toolbars only affect the items within that view.&nbsp;</P>
-<P CLASS="Para" Label=Type>
-A view might appear by itself, or stacked with other
-views in a tabbed notebook.&nbsp;You can change the layout of a perspective by
-opening and closing views and by docking them in different
-positions in the workbench window.&nbsp; </P>
-<P CLASS="Para" Label=Type>
-On Windows platforms, views can even be undocked from the main workbench window
-and appear as &quot;floating&quot; windows on the desktop. (Floating views can be docked back into the main workbench
-window later.) </P>
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-4.htm"><br>
-Perspectives</a>
-<a href="concepts-18.htm"><br>
-</a><a href="concepts-21.htm">Fast views</a><br>
-<a href="concepts-6.htm">Editors</a>
-</P>
-
-
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-3.htm">Opening views</a>
-<a href="../tasks/tasks-3b.htm"><br>
-</a><a href="../tasks/tasks-3e.htm">Moving and docking views
-</a><br>
-<a href="../tasks/tasks-9b.htm">Creating fast views<br>
-</a><a href="../tasks/tasks-3i.htm">Maximizing a view or editor<br>
-</a><a href="../tasks/tasks-9i.htm">Saving a user-defined perspective</a><br>
-<a href="../tasks/tasks-9j.htm">Resetting perspectives</a>
-</P>
-
-
-<P>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
-
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Views</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Views</H1><P CLASS="Para" Label=Type>Views support editors and provide alternativepresentations of or ways to navigate the information in your workbench.&nbsp; Forexample, the Navigator view displays projects and other resources that you are workingwith.</P><P CLASS="Para" Label=Type> Views also have their owncontext menus. To open the context menu for a view, click the icon at the leftend of the view's title bar. Some views also have their own toolbars. The actions represented by buttons on viewtoolbars only affect the items within that view.&nbsp;</P><P CLASS="Para" Label=Type>A view might appear by itself, or stacked with otherviews in a tabbed notebook.&nbsp;You can change the layout of a perspective byopening and closing views and by docking them in differentpositions in the workbench window.&nbsp; </P><P CLASS="Para" Label=Type>On Windows platforms, views can even be undocked from the main workbench windowand appear as &quot;floating&quot; windows on the desktop. (Floating views can be docked back into the main workbenchwindow later.) </P><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="concepts-4.htm">Perspectives</a><br><a href="concepts-21.htm">Fast views</a><br><a href="concepts-6.htm">Editors</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="../tasks/tasks-3.htm">Opening views</a><br><a href="../tasks/tasks-3e.htm">Moving and docking views</a><br><a href="../tasks/tasks-9b.htm">Creating fast views</a><br><a href="../tasks/tasks-3i.htm">Maximizing a view or editor</a><br><a href="../tasks/tasks-9i.htm">Saving a user-defined perspective</a><br><a href="../tasks/tasks-9j.htm">Resetting perspectives</a></p><p>&nbsp;<br><img align="texttop" src = ../images/ngibmcpy2002.gif alt="Copyright IBM Corp. 2000, 2002" width="195" height="12"></p></BODY></HTML>
