--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-3.htm
@@ -1,42 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Opening views</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Opening views</H1>
-<P CLASS="Para">
-Perspectives offer predefined combinations of views and editors. To open a view
-that is not included in the current perspective, select <b>Perspective &gt; Show View</b>
-from the main menu bar.</P>
-<P CLASS="Para">
-You can create <i>fast views</i> to provide a shortcut to views that you use
-often.</P>
-<P CLASS="Para">
-After adding a view to the current perspective, you may wish to save your new
-layout by clicking <b>Perspective &gt; Save As</b>.</P>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
-<a href="../concepts/concepts-5.htm">Views<br>
-</a><a href="../concepts/concepts-21.htm">Fast views</a><br>
-<a href="../concepts/concepts-4.htm">Perspectives</a></p>
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-3e.htm">Moving and docking views
-</a><br>
-<a href="tasks-9b.htm">Creating fast views<br>
-</a><a href="tasks-3i.htm">Maximizing a view or editor</a><br>
-<a href="tasks-9j.htm">Resetting perspectives</a>
-</P>
-
-
-<P>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
-
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Opening views</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Opening views</H1><P CLASS="Para"> Perspectives offer predefined combinations of views and editors.   To open a view that is not included in the current perspective, select <b>Window   &gt; Show View</b> from the main menu bar.</P><P CLASS="Para">You can create <i>fast views</i> to provide a shortcut to views that you useoften.</P><P CLASS="Para"> After adding a view to the current perspective, you may wish   to save your new layout by clicking <b>Window &gt; Save Perspective As</b>.</P><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br><a href="../concepts/concepts-5.htm">Views</a><br><a href="../concepts/concepts-21.htm">Fast views</a><br><a href="../concepts/concepts-4.htm">Perspectives</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-3e.htm">Moving and docking views</a><br><a href="tasks-9b.htm">Creating fast views</a><br><a href="tasks-3i.htm">Maximizing a view or editor</a><br><a href="tasks-9j.htm">Resetting perspectives</a></p><p>&nbsp;<br><img align="texttop" src = ../images/ngibmcpy2002.gif alt="Copyright IBM Corp. 2000, 2002" width="195" height="12"></p></BODY></HTML>
