--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
@@ -45,7 +45,8 @@ active.
 editor's tab turns blue, and the Navigator's title bar is no longer blue. The
 welcome page is now our active editor.<P CLASS="Intro"><img align="texttop" border="0" src="../images/Image2-activeeditor.jpg" width="643" height="496"><P CLASS="Para">&nbsp;</P>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
