--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
@@ -25,7 +25,8 @@ You can import files into the workbench either by :</P>
 In this section we will import the two files we just exported and place them
 into our second project JaneQUser2.</p>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
