--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36.htm
@@ -16,7 +16,8 @@ will use the Search button <img align="texttop"  border="0" src="../images/Image
 perform a search across the resources shown in our Navigator. Next we will learn
 how to use the Search view to work with the search results.</p>
 <P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
