--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2f.htm
@@ -21,7 +21,8 @@ task:</P>
 </ul>
 <p CLASS="Para">In both cases the file's editor is opened and the line with which the selected task is associated is highlighted.</p>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
