--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
@@ -77,7 +77,8 @@ view.&nbsp; From this menu we would have chosen Fast View.
 
 
 <P>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
