--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
@@ -103,7 +103,8 @@ will observe that our shortcut bar now has three areas:</p>
 are different between the open perspectives. Similarly each perspective has its own
 list of fast views.&nbsp;</p>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
