--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43d.htm
@@ -30,7 +30,8 @@ this default behavior using Window &gt; Preferences &gt; Workbench.</p>
 
 </blockquote>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
