--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52c.htm
@@ -49,7 +49,7 @@ this compare editor.</p>
 
 
 <P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
 
 
