--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52d.htm
@@ -46,7 +46,8 @@ difference editor.</p>
 you work down the left side and focus on the items marked as gray, and those
 items missing from the left side, it turns out not to be as tricky as it first
 seems.<p CLASS="Head"><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 
 
 </BODY>
