--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55b.htm
@@ -15,7 +15,8 @@ Each time you exit the workbench, the workbench is automatically saved, includin
 <p>
 To exit the workbench, select File &gt; Exit from the menubar.</p>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
