--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
@@ -94,7 +94,7 @@ create your second simple project.
 
 
 <P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
 
 
