--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
@@ -83,7 +83,8 @@ The Navigator will select the file JanesFile.txt.
 
 
 <P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
