--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
@@ -25,7 +25,8 @@ Exporting files </h2>
     using the export wizard.</li>
 </ul>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
