--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34b.htm
@@ -60,7 +60,8 @@ in more detail in the next section.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</P>
 </TBODY>
 </TABLE>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
