--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
@@ -78,7 +78,8 @@ down Ctrl while performing the drag and drop operation.
 
 
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
