--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39b.htm
@@ -80,7 +80,8 @@ You can move the floating view around by dragging its title bar. </P>
 
 
 <P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
