--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
@@ -123,7 +123,8 @@ another.</P>
 
 
 <P>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
