--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43.htm
@@ -44,7 +44,8 @@ resources.&nbsp;&nbsp; </P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/image1.jpg" width="643" height="496"> </P>
 <P>&nbsp;<br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
