--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43c.htm
@@ -25,8 +25,9 @@ this default behavior using Window &gt; Preferences &gt; Workbench.</p>
 
 
 </blockquote>
-<P><br>
-<img align="texttop" src = ../ngibmcpy.gif width="195" height="12">
+<P>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+
 </P>
 
 
