*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_menus.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_menus.htm
@@ -63,7 +63,7 @@ Contribute an action class that implements <b><a href="../reference/api/org/ecli
 <TD width="118">
 <P CLASS="CellBody">
 <b>
-popupMenu</b></P>
+popupMenus</b></P>
 </TD>
 <TD width="359">
 <P CLASS="CellBody">
