*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSets.htm
@@ -28,8 +28,8 @@ installed and which perspective is active.)</P>
 
 
 <P >
-The readme tool uses an action set to contribute the &quot;Open Readme
-Browser&quot; action to the workbench menu.&nbsp; (We contributed a similar
+The readme tool uses an action set to contribute several different &quot;Open Readme
+Browser&quot; actions to the workbench menu.&nbsp; (We contributed a similar
 action to the popup menu of the resource navigator.)&nbsp; The markup follows:</P>
 <font color='#4444CC'><pre>
 &lt;extension point = &quot;org.eclipse.ui.actionSets&quot;&gt;
@@ -60,10 +60,12 @@ action to the popup menu of the resource navigator.)&nbsp; The markup follows:</
 	   &lt;/actionSet&gt;
    &lt;/extension&gt;</pre></font>
 <P >
-Wow, there's a lot going on here!&nbsp; Let's take it a step at a time.&nbsp;&nbsp;</P>
+Wow, there's a lot going on here!&nbsp; Let's take it a step at a time, looking
+only at the first action.&nbsp;&nbsp;</P>
 <P >
 First, the action set is declared and given a <b>label</b>.&nbsp;
-The label &quot;ReadMe Actions&quot; is used to display the action set in the
+The label &quot;ReadMe Actions&quot; (defined for %ActionSet.name in the plug-in's
+properties file) is used to display the action set in the
 dialog shown above.&nbsp; Since we set <b> visible</b> to true, the workbench will initially have the action set
 check marked in the action set list and the actions will be visible.</P>
 <P >
@@ -80,11 +82,9 @@ specific locations in our menu.</P>
 This alone is enough to cause the menu to appear in the workbench <b>Window</b>
 menu.</P>
 <P >
-<img border="0" src="images/readmeactionset.jpg" width="232" height="335"></P>
+<img border="0" src="images/readmeactionset.jpg" width="229" height="329"></P>
 <P >
-Next, we define the actions themselves.&nbsp; (We've omitted all but the first
-action in the example above, but we'll look at the other actions in a
-moment.)&nbsp;&nbsp;</P>
+Next, we define the actions themselves.&nbsp;&nbsp;</P>
 <P >
 The action definition (<b>id</b>,
 <b>label</b>, <b>icon</b>, <b>class</b>) is
