--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
@@ -50,6 +50,32 @@ The interface of interest is <b><a href="../reference/api/org/eclipse/ui/IViewPa
 <P >
 The standard views in the workbench often display some information about an object that the user has selected or is navigating.
 Views update their contents based on actions that occur in the workbench. In our case, we are just saying hello, so our view is quite simple.</P>
+<h4 >
+Using the tools to write our plug-in</h4>
+<P >You can use any Java IDE you wish to build Eclipse plug-ins, but we'll walk
+through the steps for building our plug-in with the Eclipse Java IDE.&nbsp; If you
+are not already familiar with the Eclipse workbench and the Java IDE, consult the Java
+Development User Guide for further explanations of the steps we are
+taking.&nbsp; For now we are focusing on the code, not the tool.&nbsp; There are
+some IDE logistics for getting started:</P>
+<ol>
+  <li>You'll need to create a project to do your work.&nbsp; The simplest way is
+    to open the <b>New Project...</b> wizard and choose <b>Plug-in Project </b>from
+    the <b>Plug-in Development</b> category.&nbsp; This will set up your project
+    for writing Java code and give you a default plug-in manifest file
+    (explained in a moment.)&nbsp; Use <b>org.eclipse.examples.helloworld</b> as
+    the name for your project and <b>id</b> of your plug-in.&nbsp; The wizard
+    gives you the option of generating code for different kinds of plug-ins, but
+    we want to keep this simple.&nbsp; So for now, be sure to choose <b>Create a
+    blank plug-in project </b>on the code generators page.</li>
+  <li>Create a package <b>org.eclipse.examples.helloworld</b> underneath the <b>src</b>
+    directory for the project.</li>
+  <li>Create a new class called <b>HelloWorldView</b> in this package.</li>
+</ol>
+<h4>Writing the code</h4>
+<P >Now we're ready to study some code.&nbsp; Here is everything you need in
+your <b>HelloWorldView</b>.&nbsp; (You can copy the contents below into the
+class you created.)&nbsp;</P>
 <font color='#4444CC'><pre>
    package org.eclipse.examples.helloworld;
 
@@ -76,34 +102,46 @@ Views update their contents based on actions that occur in the workbench. In our
 <P >
 The view part creates the widgets that will represent it in the <b> createPartControl</b> method. In this example, we create an SWT label and set the &quot;Hello World&quot; text into it.&nbsp;</P>
 <P >
-We're done with the coding part!&nbsp; We can compile our new class (don't
-forget to make sure that the platform JAR files are visible in your IDE or
-compiler environment so that you can compile the plug-in), but we still have to
-figure out how to run our new view.&nbsp;</P>
+This is all we need!&nbsp; We can compile our new class, but we better make sure
+that our .classpath is set up properly so that we can compile the
+code.&nbsp;&nbsp;</P>
 
-<p>Our new view should look something like this:</p>
+<ol>
+  <li>Select the <b>org.eclipse.examples.helloWorld</b> project and open the <b>Properties</b>
+    dialog.</li>
+  <li>In the <b>Java Build Path</b> properties, select the <b>Projects</b> tab,
+    and check the projects&nbsp; <b>org.eclipse.ui</b> and <b>org.eclipse.swt</b>.
+    These are the projects that contain the classes we imported.</li>
+  <li><b>Rebuild</b> the project.&nbsp;</li>
+</ol>
+<P >
+Okay, so we've compiled the view.&nbsp; Our new view will look something like this:</P>
+
 <p>
 
-<img border="0" src="images/hello.jpg" width="281" height="173">
+<img border="0" src="images/hello.jpg" width="538" height="250">
 </p>
 <P >
-How do we add this view to the platform?</P>
+How do we run the code and add this view to the workbench?</P>
 
 
 
 <H3>
 The hello world plug-in</H3>
 <P >
-We need to inform the platform that we want to contribute a view. This is done by extending the org.eclipse.ui.views extension point. We register our extension by providing a manifest file,<b>
+We need to inform the platform that we want to contribute our view. This is done by extending the
+<b><a href="../reference/extension-points/org_eclipse_ui_views.html"> org.eclipse.ui.views</a></b> extension point. We register our extension by providing a manifest file,<b>
 plugin.xml</b>, which describes our plug-in, including where its code is located, and the extension
 we are adding.</P>
+<P >
+(If you are still following along, you can copy this information into the <b>plugin.xml
+</b>that was generated when you created the project.)</P>
 <font color='#4444CC'><pre>
    &lt;?xml version=&quot;1.0&quot; ?&gt;
    &lt;plugin
       name=&quot;Hello World Example&quot; 
       id=&quot;org.eclipse.examples.helloworld&quot;
       version=&quot;1.0&quot;
-      provider-name=&quot;Object Technology International, Inc.&quot;&gt;
       &lt;requires&gt;
          &lt;import plugin=&quot;org.eclipse.ui&quot; /&gt;
       &lt;/requires&gt;
@@ -123,13 +161,13 @@ we are adding.</P>
    &lt;/plugin&gt;
 </pre></font>
 <P >
-In this file, we define the <b>name</b>, <b>id</b>,
-<b>version</b>, and <b>provider-name</b> for our plug-in. </P>
+In this file, we define the <b>name</b>, <b>id</b>, and <b>version</b> for our plug-in. </P>
 <P >
 We also list our required plug-ins. Since we use workbench and SWT API in our
 plug-in, we must list
-<b>org.eclipse.ui</b>. We must also describe where our executable code is located. In our case, we will package the code in
-<b>helloworld.jar</b>.</P>
+<b>org.eclipse.ui</b>. We must also describe where our executable code is located.
+We intend to package the code in
+<b>helloworld.jar</b>, so we register that as our <b>library</b> name.</P>
 <P >
 Finally, we declare what extension point our plug-in is contributing. The <b><a href="../reference/extension-points/org_eclipse_ui_views.html"> org.eclipse.ui.views</a></b> extension has several different configuration parameters. Let's review the parameters we have specified in our manifest.</P>
 <P >
@@ -156,6 +194,14 @@ should avoid using class names from that package.&nbsp;&nbsp; Otherwise it will 
 In the above manifest, we have used a common id prefix (<b>org.eclipse.examples.helloworld</b>)
 but all of our ids are unique.&nbsp; This naming approach helps us to read the
 file and see which ids are related.&nbsp; </P>
+
+<h4>
+ What next? </h4>
+
+<P>
+ At this point, we have implemented a view and declared our contribution in our
+ plug-in manifest.&nbsp; Now we need to install our plug-in into the platform so
+ that we can run it. </P>
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
 
